Devops Project/k8s/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: devops-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: your-docker-registry/service-a:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: '/'
            port: 5000
          initialDelaySeconds: 5
