Devops Project/k8s/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: devops-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: your-docker-registry/service-b:latest
        ports:
        - containerPort: 5001
        readinessProbe:
          httpGet:
            path: '/'
            port: 5001
          initialDelaySeconds: 5
