Devops Project/k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: devops-sample
spec:
  selector:
    app: service-a
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
