Devops Project/k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: devops-sample
spec:
  selector:
    app: service-b
  ports:
  - port: 80
    targetPort: 5001
  type: ClusterIP
